--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,2 +1,17 @@
 @import "defaults";
 
+.header {
+  min-height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(206, 167, 167);
+
+  &__title {
+    font-size: 4rem;
+    color: #fff;
+    text-shadow: 1px 1px 3px #000;
+    padding:0 4rem 2rem;
+    border-bottom: solid #000;
+  }
+}
