Change header UI

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,9 +23,20 @@ body {
   background: #cea7a7;
 }
 .header__title {
+  min-width: 20rem;
   font-size: 4rem;
   color: #fff;
   text-shadow: 1px 1px 3px #000;
-  padding: 0 4rem 2rem;
-  border-bottom: solid #000;
+  padding: 0 2rem 1rem;
+  box-shadow: 0 0.5rem 2rem #ac8c8c;
+  border-radius: 0.5rem;
+  text-align: center;
+}
+.header__title::first-letter {
+  font-size: 6rem;
+}
+
+.main {
+  min-height: 80vh;
+  background: #8989c5;
 }/*# sourceMappingURL=style.css.map */
