--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,4 +26,35 @@
 .main {
   min-height: 80vh;
   background: rgb(137, 137, 197);
+
+  &__wrapper {
+    width: 80%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+
+    &__search {
+      width: 100%;
+      margin-top: 1rem;
+
+      &__input {
+        display: block;
+        width: 100%;
+        padding: .5rem;
+        border: 0;
+        background: transparent;
+        text-align: center;
+        border-radius: 1rem;
+        outline: none;
+        box-shadow: 0 .5rem 1rem rgb(134, 69, 134);
+        color: #fff;
+        text-shadow: 1px 1px 3px #000;
+        font-size: 2rem;
+
+        &:focus {
+          background: rgb(172, 89, 172);
+        }
+      }
+    }
+  }
 }
