--- a/styles/style.scss
+++ b/styles/style.scss
@@ -56,5 +56,17 @@
         }
       }
     }
+
+    &__cards {
+      display: grid;
+      grid-template-columns: repeat (1, 1fr);
+
+      &__card {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+    }
   }
 }
