Add updateCardsUI function

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,6 +44,7 @@ body {
   width: 80%;
   margin: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 .main__wrapper__search {
