--- a/styles/style.scss
+++ b/styles/style.scss
@@ -31,6 +31,7 @@
     width: 80%;
     margin: auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 
     &__search {
