--- a/styles/style.css
+++ b/styles/style.css
@@ -73,8 +73,10 @@ body {
   grid-template-columns: repeat 1, 1fr;
 }
 .main__wrapper__cards__card {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+.main__wrapper__cards__card img {
+  max-width: 100%;
 }/*# sourceMappingURL=style.css.map */
