--- a/styles/style.scss
+++ b/styles/style.scss
@@ -59,16 +59,48 @@
     }
 
     &__cards {
+      margin-top: 1rem;
       display: grid;
-      grid-template-columns: repeat (1, 1fr);
+      grid-gap: 1rem;
+      grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
 
       &__card {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        height: 40rem;
+        box-shadow: .5rem .5rem 1rem rgb(255, 203, 212);
 
-        img {
-          max-width: 100%;
+        &__name {
+          display: flex;
+          text-align: center;
+          justify-content: center;
+          align-items: center;
+          flex: 1;
+          font-size: 2.5rem;
+          letter-spacing: .1rem;
+          color: #fff;
+          text-shadow: 1px 1px 3px #000;
+        }
+        
+        &__title {
+          display: flex;
+          justify-content: center;
+          align-items: flex-start;
+          flex: 1;
+          font-size: 2rem;
+          text-align: center;
+          font-weight: bold;
+        }
+
+        &__img-container {
+          flex: 1;
+          text-align: center;
+
+          &__img {
+            object-fit: cover;
+            max-width: 100%;
+          }
         }
       }
     }
